# HW_OOP_Andrianov_M

./: .gitignore  README.md  main.py  main_14.1.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_classes_py.html
src/: caetgory.py  classes.py  product.py
tests/: conftest.py  test_classes.py
